Fixed bug for scoreboard which includes making the positions accurate and prevents multiple people with similar names to get the green board when they guess correct. Added a correct song message in the chat. Made the chat wrap down when the message is too long.  Fixed letters per word. Added more songs.

--- a/src/index.css
+++ b/src/index.css
@@ -145,9 +145,13 @@ button:hover {
 }
 
 #chat-history > li {
-  height: 24px;
+  padding: 4px;
   align-content: center;
   font-size: 14px;
+  display: block;           
+  width: 100%;              
+  box-sizing: border-box;   
+  overflow-wrap: break-word;
 }
 
 #chat-history > li:nth-child(odd) { 
